--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  
 <body>
     <div>
-        <h1>Blowing Bubbles</h1>
-        <h3>Click on the button to make a bubble</h3>
+        <h1>Green Bubbles?</h1>
+        <h3>Click on the button to see bubble</h3>
           <link href="style.css" rel="stylesheet">
         <!-- Add id to image -->
         <img id="image" src=
@@ -63,7 +63,7 @@
       </script>
       
       <button onclick="getActivity()">Get a random activity</button>
-      <button onclick="getQuote()">Get a random quote</button>
+      <button onclick="getQuote()">Get a message</button>
       <div id="quote"></div>      
       </body>
  
