--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
  
@@ -14,7 +15,7 @@
 <body>
     <div>
         <h1>Green Bubbles?</h1>
-        <h3>Click on the button to see bubble</h3>
+        <h3>Click on the button to see a bubble</h3>
           <link href="style.css" rel="stylesheet">
         <!-- Add id to image -->
         <img id="image" src=
@@ -62,8 +63,8 @@
         }
       </script>
       
-      <button onclick="getActivity()">Get a random activity</button>
-      <button onclick="getQuote()">Get a message</button>
+      <button onclick="getActivity()">Activity of the day</button>
+      <button onclick="getQuote()">Quote of the day</button>
       <div id="quote"></div>      
       </body>
  
